Второй день. Разработка окна простого гидрорасчета

--- a/OpenPPS/OpenPPS.csproj
+++ b/OpenPPS/OpenPPS.csproj
@@ -70,6 +70,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SimpleGidro.xaml.cs">
+      <DependentUpon>SimpleGidro.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UnitsCombo.xaml.cs">
+      <DependentUpon>UnitsCombo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UoM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -83,6 +89,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SimpleGidro.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UnitsCombo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
